[package]
name = "wasm-rawtx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rawtx-rs = "0.1.7"
wasm-bindgen = "0.2.91"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
